# Tameshigiri

./: CMakeLists.txt  README.md
.github/workflows/: CD.yaml  CD.yml  CI.yaml  CI.yml
src/: main.cpp
src/player/: CMakeLists.txt
src/player/include/: player.hpp
src/player/src/: player.cpp
src/utils/: utils.hpp
tests/: CMakeLists.txt  player_tests.cpp
